--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,12 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 		<title>Stock Simulator</title>
-			{{!-- <link rel="stylesheet" type="text/css" href="public/css/style.css"> --}}
+		    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 		    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-            <script src="js/app.js"></script>
-			<script src="js/portfolio.js"></script>
-			<script src="js/add.js"></script>
 
             {{!-- <script src="assets/moment.js"></script>	 --}}
 	</head>
