--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
-		<title>Stock Simulator</title>
-		    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-		    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<title>Stock Simulator</title>
+	<link rel="stylesheet" href="https://use.typekit.net/oad3efw.css">
+	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-            {{!-- <script src="assets/moment.js"></script>	 --}}
-	</head>
-	<body>
-		{{{ body }}}
+	{{!-- <script src="assets/moment.js"></script>	 --}}
+</head>
 
+<body>
+	{{{ body }}}
+
+	<script src="https://kit.fontawesome.com/77faf95db4.js"></script>
 	<script src="assets/js/main.js"></script>
-	</body>
+</body>
+
 </html>
