--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,12 +1,12 @@
 <div class="page-container">
     <div class="waves">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="svg-wave" id="wave1">
-            <path fill="rgba(68, 84, 204, 0.637)" fill-opacity="1"
+            <path fill="#FF3800" fill-opacity=".6"
                 d="M0,256L40,266.7C80,277,160,299,240,272C320,245,400,171,480,117.3C560,64,640,32,720,58.7C800,85,880,171,960,176C1040,181,1120,107,1200,106.7C1280,107,1360,181,1400,218.7L1440,256L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z">
             </path>
         </svg>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="svg-wave" id="wave2">
-            <path fill="rgb(68, 84, 204)" fill-opacity=".8"
+            <path fill="#FF3800" fill-opacity=".8"
                 d="M0,128L48,133.3C96,139,192,149,288,138.7C384,128,480,96,576,80C672,64,768,64,864,58.7C960,53,1056,43,1152,48C1248,53,1344,75,1392,85.3L1440,96L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
             </path>
         </svg>
@@ -16,8 +16,8 @@
         <h2 class="hero__subtitle">Faster Than Ever With Simple Reactions.</h2>
 
         <form class="hero__form">
-            <input type="text" name="location" id="location">
-            <a href="#"><input type="button" value="&gt;" id="Btn" class="submit"></a>
+            <input placeholder="City, State, or Zip Code" type="text" name="location" id="location" class="hero__form--input">
+            <a href="#" class="hero__form--link"><input type="button" id="Btn" class="hero__form--btn"><i class="search-icon fas fa-search-location"></i></a>
         </form>
     </div>
 </div>
