created logo; landing page transitions

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,7 @@
 <div class="page-container">
+    <div class="logo-container">
+        <h3 class="logo">Pic<span class="orange-text">ki</span></h3>
+    </div>
     <div class="waves">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="svg-wave" id="wave1">
             <path fill="#FF3800" fill-opacity=".6"
@@ -12,7 +15,7 @@
         </svg>
     </div>
     <div class="hero">
-        <h1 class="hero__title">Find Your Next Destination</h1>
+        <h1 class="hero__title">Find Your Next Food Destination.</h1>
         <h2 class="hero__subtitle">Faster Than Ever With Simple Reactions.</h2>
 
         <form class="hero__form">
