--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -12,7 +12,7 @@ body {
   font-size: 10px;
   min-height: 100vh;
   background-color: #181818;
-  background-color: #f0f0f0;
+  background-color: #e4dada;
 }
 
 /*************************************************************************************************************
@@ -20,6 +20,35 @@ body {
 ***************************************************************************************************************/
 .waves .svg-wave {
   position: absolute;
+}
+
+.logo {
+  font-size: 3.8rem;
+  color: #f0f0f0;
+}
+
+.logo-container {
+  position: absolute;
+  z-index: 100;
+  min-width: 15rem;
+  top: 1.5rem;
+  left: 2.5rem;
+}
+
+.logo .orange-text {
+  position: relative;
+  color: #FF3800;
+}
+
+.logo .orange-text::before {
+  content: '';
+  position: absolute;
+  left: .25rem;
+  top: .25rem;
+  z-index: -1;
+  background-color: #f0f0f0;
+  width: 95%;
+  height: 80%;
 }
 
 .hero {
@@ -35,13 +64,13 @@ body {
 .hero__title {
   font-weight: 400;
   font-size: 4.6rem;
-  color: #8f8f8f;
+  color: rgba(68, 84, 204, 0.8);
 }
 
 .hero__subtitle {
   font-weight: 700;
   font-size: 2.52rem;
-  color: rgba(68, 84, 204, 0.8);
+  color: #8f8f8f;
 }
 
 .hero__form {
@@ -64,7 +93,7 @@ body {
 
 .hero__form--input, .hero__form--btn {
   font-size: 2.15rem;
-  padding: 1.2rem 1.4rem;
+  padding: .9rem 1.4rem;
   border: none;
 }
 
@@ -85,13 +114,19 @@ body {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   font-size: 2rem;
-  color: #f0f0f0;
+  color: #FF3800;
+  pointer-events: none;
+  -webkit-transition: .25s all ease-out;
+  transition: .25s all ease-out;
 }
 
 .hero__form--input {
   width: 100%;
   border-top-left-radius: 1rem;
   border-bottom-left-radius: 1rem;
+  background-color: #f0f0f0;
+  -webkit-transition: .5s all ease;
+  transition: .5s all ease;
 }
 
 .hero__form--input::-webkit-input-placeholder {
@@ -114,14 +149,28 @@ body {
   font-style: italic;
 }
 
+.hero__form--input:focus {
+  background-color: rgba(240, 240, 240, 0.5);
+}
+
 .hero__form--btn {
   margin-top: .25rem;
-  background-color: #FF3800;
+  background-color: #f0f0f0;
   border-top-right-radius: 1rem;
   border-bottom-right-radius: 1rem;
   cursor: pointer;
   font-weight: 700;
   height: 100%;
   padding-left: 3.75rem;
+  -webkit-transition: .3s all ease;
+  transition: .3s all ease;
+}
+
+.hero__form--btn:hover {
+  background-color: #FF3800;
+}
+
+.hero__form--btn:hover + .search-icon {
+  color: rgba(240, 240, 240, 0.5);
 }
 /*# sourceMappingURL=style.css.map */
