--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -20,15 +20,46 @@ body {
     font-size: 10px;
     min-height: 100vh;
     background-color: rgb(24, 24, 24);
-    background-color: $white;
+    background-color: rgb(228, 218, 218);
 }
 
 /*************************************************************************************************************
 ==================================   LANDING PAGE ============================================================
 ***************************************************************************************************************/
+
 .waves {
     .svg-wave {
         position: absolute;
+    }
+}
+
+.logo {
+    font-size: 3.8rem;
+    color: $white;
+
+
+    &-container {
+        position: absolute;
+        z-index: 100;
+        min-width: 15rem;
+        top: 1.5rem;
+        left: 2.5rem;
+    }
+
+    .orange-text {
+        position: relative;
+        color: $orange;
+
+        &::before {
+            content: '';
+            position: absolute;
+            left: .25rem;
+            top: .25rem;
+            z-index: -1;
+            background-color: $white;
+            width: 95%;
+            height: 80%;
+        }
     }
 }
 
@@ -43,13 +74,13 @@ body {
     &__title {
         font-weight: 400;
         font-size: 4.6rem;
-        color: #8f8f8f;
+        color: rgba(68, 84, 204, 0.8);
     }
 
     &__subtitle {
         font-weight: 700;
         font-size: 2.52rem;
-        color: rgba(68, 84, 204, 0.8);
+        color: #8f8f8f;
     }
 
     &__form {
@@ -65,7 +96,7 @@ body {
         &--input,
         &--btn {
             font-size: 2.15rem;
-            padding: 1.2rem 1.4rem;
+            padding: .9rem 1.4rem;
             border: none;
 
             &:focus {
@@ -84,7 +115,9 @@ body {
                 left: 50%;
                 transform: translate(-50%,-50%);
                 font-size: 2rem;
-                color: $white;
+                color: $orange;
+                pointer-events: none;
+                transition: .25s all ease-out;
             }
         }
 
@@ -92,22 +125,37 @@ body {
             width: 100%;
             border-top-left-radius: 1rem;
             border-bottom-left-radius: 1rem;
+            background-color: $white;
+            transition: .5s all ease;
 
             &::placeholder {
                 opacity: .5;
                 font-style: italic;
             }
+
+            &:focus {
+                background-color: rgba($white, .5);
+            }
         }
 
         &--btn {
             margin-top: .25rem;
-            background-color: $orange;
+            background-color: $white;
             border-top-right-radius: 1rem;
             border-bottom-right-radius: 1rem;
             cursor: pointer;
             font-weight: 700;
             height: 100%;
             padding-left: 3.75rem;
+            transition: .3s all ease;
+
+            &:hover {
+                background-color: $orange;
+
+                + .search-icon {
+                    color: rgba($white, .5);
+                }
+            }
         }
     }
 
