--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -21,6 +21,7 @@ body {
     min-height: 100vh;
     background-color: rgb(24, 24, 24);
     background-color: rgb(228, 218, 218);
+    overflow-x: hidden;
 }
 
 /*************************************************************************************************************
@@ -65,7 +66,7 @@ body {
 
 .hero {
     position: absolute;
-    top: 50%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%,-50%);
     text-align: center;
@@ -75,6 +76,7 @@ body {
         font-weight: 400;
         font-size: 4.6rem;
         color: rgba(68, 84, 204, 0.8);
+        margin-bottom: -1rem;
     }
 
     &__subtitle {
@@ -84,20 +86,21 @@ body {
     }
 
     &__form {
-        max-width: 40rem;
+        max-width: 35rem;
+        height: 3.75rem;
         max-height: 10rem;
         margin: 3rem auto 0;
         display: flex;
-        align-items: center;
+        align-items: flex-end;
         justify-content: center;
         border-radius: 1rem;
         box-shadow: 0 0rem 3rem rgba($black, .1);
 
         &--input,
         &--btn {
-            font-size: 2.15rem;
-            padding: .9rem 1.4rem;
+            font-size: 2.05rem;
             border: none;
+            padding: .95rem 1.4rem;
 
             &:focus {
                 outline: none;
@@ -106,7 +109,9 @@ body {
         
         &--link {
             position: relative;
-            max-height: 10rem;
+            // max-height: 10rem;
+            // min-height: 4.8rem;
+            height: 3.75rem;
 
             .search-icon {
                 position: absolute;
@@ -122,11 +127,12 @@ body {
         }
 
         &--input {
-            width: 100%;
             border-top-left-radius: 1rem;
             border-bottom-left-radius: 1rem;
             background-color: $white;
             transition: .5s all ease;
+            height: 100%;
+            flex-grow: 5;
 
             &::placeholder {
                 opacity: .5;
@@ -139,7 +145,6 @@ body {
         }
 
         &--btn {
-            margin-top: .25rem;
             background-color: $white;
             border-top-right-radius: 1rem;
             border-bottom-right-radius: 1rem;
