--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,18 @@
     </div>
     <div class="waves">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="svg-wave" id="wave1">
-            <path fill="#FF3800" fill-opacity=".6"
+            <filter id="dropshadow" height="130%">
+                <feGaussianBlur in="SourceAlpha" stdDeviation="3" /> <!-- stdDeviation is how much to blur -->
+                <feOffset dx="2" dy="2" result="offsetblur" /> <!-- how much to offset -->
+                <feComponentTransfer>
+                    <feFuncA type="linear" slope="0.5" /> <!-- slope is the opacity of the shadow -->
+                </feComponentTransfer>
+                <feMerge>
+                    <feMergeNode /> <!-- this contains the offset blurred image -->
+                    <feMergeNode in="SourceGraphic" /> <!-- this contains the element that the filter is applied to -->
+                </feMerge>
+            </filter>
+            <path fill="#FF3800" fill-opacity=".6" style="filter:url(#dropshadow)"
                 d="M0,256L40,266.7C80,277,160,299,240,272C320,245,400,171,480,117.3C560,64,640,32,720,58.7C800,85,880,171,960,176C1040,181,1120,107,1200,106.7C1280,107,1360,181,1400,218.7L1440,256L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z">
             </path>
         </svg>
@@ -19,8 +30,10 @@
         <h2 class="hero__subtitle">Faster Than Ever With Simple Reactions.</h2>
 
         <form class="hero__form">
-            <input placeholder="City, State, or Zip Code" type="text" name="location" id="location" class="hero__form--input">
-            <a href="#" class="hero__form--link"><input type="button" id="Btn" class="hero__form--btn"><i class="search-icon fas fa-search-location"></i></a>
+            <input placeholder="City, State, or Zip Code" type="text" name="location" id="location"
+                class="hero__form--input">
+            <a href="#" class="hero__form--link"><input type="button" id="Btn" class="hero__form--btn"><i
+                    class="search-icon fas fa-search-location"></i></a>
         </form>
     </div>
 </div>
