--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,137 +1,10 @@
-<<<<<<< HEAD
 /* Color Theme Swatches in Hex */
-* {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  font-family: brandon-grotesque, sans-serif;
-}
-
-body {
-  position: relative;
-  font-size: 10px;
-  min-height: 100vh;
-  background-color: #181818;
-  background-color: #f0f0f0;
-}
-
-/*************************************************************************************************************
-==================================   LANDING PAGE ============================================================
-***************************************************************************************************************/
-.waves .svg-wave {
-  position: absolute;
-}
-
-.hero {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  text-align: center;
-  width: 100%;
-}
-
-.hero__title {
-  font-weight: 400;
-  font-size: 4.6rem;
-  color: #8f8f8f;
-}
-
-.hero__subtitle {
-  font-weight: 700;
-  font-size: 2.52rem;
-  color: rgba(68, 84, 204, 0.8);
-}
-
-.hero__form {
-  max-width: 40rem;
-  max-height: 10rem;
-  margin: 3rem auto 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  border-radius: 1rem;
-  -webkit-box-shadow: 0 0rem 3rem rgba(25, 25, 31, 0.1);
-          box-shadow: 0 0rem 3rem rgba(25, 25, 31, 0.1);
-}
-
-.hero__form--input, .hero__form--btn {
-  font-size: 2.15rem;
-  padding: 1.2rem 1.4rem;
-  border: none;
-}
-
-.hero__form--input:focus, .hero__form--btn:focus {
-  outline: none;
-}
-
-.hero__form--link {
-  position: relative;
-  max-height: 10rem;
-}
-
-.hero__form--link .search-icon {
-  position: absolute;
-  z-index: 20;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  font-size: 2rem;
-  color: #f0f0f0;
-}
-
-.hero__form--input {
-  width: 100%;
-  border-top-left-radius: 1rem;
-  border-bottom-left-radius: 1rem;
-}
-
-.hero__form--input::-webkit-input-placeholder {
-  opacity: .5;
-  font-style: italic;
-}
-
-.hero__form--input:-ms-input-placeholder {
-  opacity: .5;
-  font-style: italic;
-}
-
-.hero__form--input::-ms-input-placeholder {
-  opacity: .5;
-  font-style: italic;
-}
-
-.hero__form--input::placeholder {
-  opacity: .5;
-  font-style: italic;
-}
-
-.hero__form--btn {
-  margin-top: .25rem;
-  background-color: #FF3800;
-  border-top-right-radius: 1rem;
-  border-bottom-right-radius: 1rem;
-  cursor: pointer;
-  font-weight: 700;
-  height: 100%;
-  padding-left: 3.75rem;
-}
-/*# sourceMappingURL=style.css.map */
-=======
 * {
     margin: 0;
     padding: 0;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
+    font-family: brandon-grotesque, sans-serif;
   }
   
   body {
@@ -139,6 +12,8 @@ body {
     font-size: 10px;
     min-height: 100vh;
     background-color: #181818;
+    background-color: #e4dada;
+    overflow-x: hidden;
   }
   
   /*************************************************************************************************************
@@ -148,30 +23,159 @@ body {
     position: absolute;
   }
   
-  .waves #svg1 {
-    fill: rgba(68, 84, 204, 0.637);
+  .logo {
+    font-size: 3.8rem;
+    color: #f0f0f0;
+  }
+  
+  .logo-container {
+    position: absolute;
+    z-index: 100;
+    min-width: 15rem;
+    top: 1.5rem;
+    left: 2.5rem;
+  }
+  
+  .logo .orange-text {
+    position: relative;
+    color: #FF3800;
+  }
+  
+  .logo .orange-text::before {
+    content: '';
+    position: absolute;
+    left: .25rem;
+    top: .25rem;
+    z-index: -1;
+    background-color: #f0f0f0;
+    width: 95%;
+    height: 80%;
   }
   
   .hero {
     position: absolute;
+    top: 60%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    text-align: center;
+    width: 100%;
+  }
+  
+  .hero__title {
+    font-weight: 400;
+    font-size: 4.6rem;
+    color: rgba(68, 84, 204, 0.8);
+    margin-bottom: -1rem;
+  }
+  
+  .hero__subtitle {
+    font-weight: 700;
+    font-size: 2.52rem;
+    color: #8f8f8f;
+  }
+  
+  .hero__form {
+    max-width: 35rem;
+    height: 3.75rem;
+    max-height: 10rem;
+    margin: 3rem auto 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    border-radius: 1rem;
+    -webkit-box-shadow: 0 0rem 3rem rgba(25, 25, 31, 0.1);
+            box-shadow: 0 0rem 3rem rgba(25, 25, 31, 0.1);
+  }
+  
+  .hero__form--input, .hero__form--btn {
+    font-size: 2.05rem;
+    border: none;
+    padding: .95rem 1.4rem;
+  }
+  
+  .hero__form--input:focus, .hero__form--btn:focus {
+    outline: none;
+  }
+  
+  .hero__form--link {
+    position: relative;
+    height: 3.75rem;
+  }
+  
+  .hero__form--link .search-icon {
+    position: absolute;
+    z-index: 20;
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
-    background-color: rgb(227, 219, 219);
-    text-align: center;
+    font-size: 2rem;
+    color: #FF3800;
+    pointer-events: none;
+    -webkit-transition: .25s all ease-out;
+    transition: .25s all ease-out;
+  }
+  
+  .hero__form--input {
+    border-top-left-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+    background-color: #f0f0f0;
+    -webkit-transition: .5s all ease;
+    transition: .5s all ease;
+    height: 100%;
+    -webkit-box-flex: 5;
+        -ms-flex-positive: 5;
+            flex-grow: 5;
+  }
+  
+  .hero__form--input::-webkit-input-placeholder {
+    opacity: .5;
+    font-style: italic;
+  }
+  
+  .hero__form--input:-ms-input-placeholder {
+    opacity: .5;
+    font-style: italic;
+  }
+  
+  .hero__form--input::-ms-input-placeholder {
+    opacity: .5;
+    font-style: italic;
+  }
+  
+  .hero__form--input::placeholder {
+    opacity: .5;
+    font-style: italic;
+  }
+  
+  .hero__form--input:focus {
+    background-color: rgba(240, 240, 240, 0.5);
+  }
+  
+  .hero__form--btn {
+    background-color: #f0f0f0;
+    border-top-right-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+    cursor: pointer;
+    font-weight: 700;
+    height: 100%;
+    padding-left: 3.75rem;
+    -webkit-transition: .3s all ease;
+    transition: .3s all ease;
+  }
+  
+  .hero__form--btn:hover {
+    background-color: #FF3800;
+  }
+  
+  .hero__form--btn:hover + .search-icon {
+    color: rgba(240, 240, 240, 0.5);
   }
   /*# sourceMappingURL=style.css.map */
-
-  h1{
-    background: url(https://media.giphy.com/media/l3vRbTrGdpZrjjco8/giphy.gif);
-    background-size: contain;
-    background-position: top left;
-    -webkit-background-clip: text;
-    color: transparent;
-    font-size: 4rem;
-    font-weight: bold;
-    font-family: sans-serif;
-    outline-color: black;
-  }
->>>>>>> css changes
