--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -38,7 +38,7 @@ body {
 
 .logo .orange-text {
   position: relative;
-  color: #FF3800;
+  color: rgba(255, 56, 0, 0.8);
 }
 
 .logo .orange-text::before {
@@ -177,5 +177,221 @@ body {
 
 .hero__form--btn:hover + .search-icon {
   color: rgba(240, 240, 240, 0.5);
+}
+
+.nav-expand {
+  position: fixed;
+  z-index: 9999;
+  top: 1rem;
+  right: 1rem;
+  background-color: #544634;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  -webkit-box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.3);
+          box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+}
+
+.nav-expand .nav-burger {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.nav-expand .nav-burger path {
+  fill: #e1e1e1;
+}
+
+.nav {
+  position: relative;
+  left: 15%;
+  top: 55%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 15rem;
+  text-align: right;
+}
+
+.nav-container {
+  position: fixed;
+  z-index: 200;
+  border-radius: 50%;
+  -webkit-transform: translate(50%, -50%);
+          transform: translate(50%, -50%);
+  top: 2.5rem;
+  right: 2.5rem;
+  height: 45rem;
+  width: 45rem;
+  background-color: #FF3800;
+  background-color: transparent;
+  overflow: hidden;
+  -webkit-clip-path: circle(1.5rem);
+          clip-path: circle(1.5rem);
+  -webkit-transition: .7s all;
+  transition: .7s all;
+}
+
+.nav-item {
+  position: relative;
+  color: #ebebeb;
+  color: rgba(68, 84, 204, 0.8);
+  text-decoration: none;
+  font-size: 2.5rem;
+  max-width: 100%;
+}
+
+.nav-item::before {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  bottom: 0;
+  height: .5rem;
+  width: 0%;
+  background-color: #1e466b;
+  -webkit-transition: .3s all;
+  transition: .3s all;
+}
+
+.nav-item:hover::before {
+  width: 100%;
+}
+
+/*************************************************************************************************************
+==================================   APP PAGE ============================================================
+***************************************************************************************************************/
+.header {
+  width: 100vw;
+  height: 5rem;
+  background-color: #FF3800;
+}
+
+.header__content {
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
+  background-color: rgba(240, 240, 240, 0.5);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header__form {
+  max-width: 35rem;
+  height: 3.25rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 1rem;
+  -webkit-box-shadow: 0 0rem 3rem rgba(25, 25, 31, 0.1);
+          box-shadow: 0 0rem 3rem rgba(25, 25, 31, 0.1);
+  margin-left: 1rem;
+}
+
+.header__form--input, .header__form--btn {
+  font-size: 1.7rem;
+  border: none;
+  padding: .95rem 1.4rem;
+}
+
+.header__form--input:focus, .header__form--btn:focus {
+  outline: none;
+}
+
+.header__form--link {
+  position: relative;
+  height: 3.25rem;
+}
+
+.header__form--link .search-icon {
+  position: absolute;
+  z-index: 20;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  font-size: 1.5rem;
+  color: #FF3800;
+  pointer-events: none;
+  -webkit-transition: .25s all ease-out;
+  transition: .25s all ease-out;
+}
+
+.header__form--input {
+  border-top-left-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+  background-color: #f0f0f0;
+  -webkit-transition: .5s all ease;
+  transition: .5s all ease;
+  height: 100%;
+  -webkit-box-flex: 5;
+      -ms-flex-positive: 5;
+          flex-grow: 5;
+}
+
+.header__form--input::-webkit-input-placeholder {
+  opacity: .5;
+  font-style: italic;
+}
+
+.header__form--input:-ms-input-placeholder {
+  opacity: .5;
+  font-style: italic;
+}
+
+.header__form--input::-ms-input-placeholder {
+  opacity: .5;
+  font-style: italic;
+}
+
+.header__form--input::placeholder {
+  opacity: .5;
+  font-style: italic;
+}
+
+.header__form--input:focus {
+  background-color: rgba(240, 240, 240, 0.5);
+}
+
+.header__form--btn {
+  background-color: #f0f0f0;
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  cursor: pointer;
+  font-weight: 700;
+  height: 100%;
+  padding-left: 3.75rem;
+  -webkit-transition: .3s all ease;
+  transition: .3s all ease;
+}
+
+.header__form--btn:hover {
+  background-color: #FF3800;
+}
+
+.header__form--btn:hover + .search-icon {
+  color: rgba(240, 240, 240, 0.5);
+}
+
+.full-circle {
+  -webkit-clip-path: circle(100%);
+          clip-path: circle(100%);
 }
 /*# sourceMappingURL=style.css.map */
