--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -7,6 +7,30 @@
                 <a href="#" class="header__form--link"><input type="button" id="Btn" class="header__form--btn"><i
                         class="search-icon fas fa-search-location"></i></a>
             </form>
+            <div class="header__filter--container">
+                <div class="header__filter__radio--container">
+                    <input type="radio" name="filter" id="Category" class="header__filter__radio">
+                    <label for="Category" class="header__filter__radio--label">
+                        Category
+                        <div class="mdi mdi-menu-down"></div>
+                    </label>
+                </div>
+                <div class="header__filter__radio--container">
+                    <input type="radio" name="filter" id="Category" class="header__filter__radio">
+                    <label for="Category" class="header__filter__radio--label">
+                        Price
+                        <div class="mdi mdi-menu-down"></div>
+                    </label>
+                </div>
+                <div class="header__filter__radio--container">
+                    <input type="radio" name="filter" id="Category" class="header__filter__radio">
+                    <label for="Category" class="header__filter__radio--label">
+                        Rating
+                        <div class="mdi mdi-menu-down"></div>
+                    </label>
+                </div>
+                <div class="header__filter__submit--container mdi mdi-filter"><input type="button" value="Filter Results" class="header__filter__submit" id="filterResults"></div>
+            </div>
         </div>
     </header>
 </main>
