--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Stock Simulator</title>
+	<link rel="stylesheet" href="https://cdn.materialdesignicons.com/4.2.95/css/materialdesignicons.min.css">
 	<link rel="stylesheet" href="https://use.typekit.net/oad3efw.css">
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
