--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -40,11 +40,13 @@
         <h1 class="hero__title">Find Your Next Food Destination.</h1>
         <h2 class="hero__subtitle">Faster Than Ever With Simple Reactions.</h2>
 
-        <form class="hero__form">
+        <form class="hero__form search__form">
             <input placeholder="City, State, or Zip Code" type="text" name="location" id="location"
                 class="hero__form--input">
-            <a href="#" class="hero__form--link"><input type="button" id="Btn" class="hero__form--btn"><i
-                    class="search-icon fas fa-search-location"></i></a>
+            <a href="#" class="hero__form--link">
+                <input type="submit" id="Btn" class="hero__form--btn" value="">
+                <i class="search-icon fas fa-search-location"></i>
+            </a>
         </form>
     </div>
 </div>
