--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Stock Simulator</title>
+	<title>Picki</title>
 	<link rel="stylesheet" href="https://cdn.materialdesignicons.com/4.2.95/css/materialdesignicons.min.css">
 	<link rel="stylesheet" href="https://use.typekit.net/oad3efw.css">
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
@@ -15,7 +15,8 @@
 
 <body>
 	{{{ body }}}
-
+	<script src="https://cdn.jsdelivr.net/npm/places.js@1.16.4"></script>
+	<script src="assets/js/algolia.js"></script>
 	<script src="https://kit.fontawesome.com/77faf95db4.js"></script>
 	<script src="assets/js/main.js"></script>
 </body>
