--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -104,6 +104,7 @@ body {
             font-size: 2.05rem;
             border: none;
             padding: .95rem 1.4rem;
+            max-height: 3.75rem;
 
             &:focus {
                 outline: none;
@@ -361,6 +362,7 @@ body {
             font-size: 1.7rem;
             border: none;
             padding: .95rem 1.4rem;
+            max-height: 3.25rem;
 
             &:focus {
                 outline: none;
@@ -423,18 +425,25 @@ body {
     }
 }
 
-
-
-
-
-
-
-
-
-
-
 // utilities
 
 .full-circle {
     clip-path: circle(100%);
+}
+
+.ap-input {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+.ap-icon-pin {
+    display: none;
+}
+
+.ap-suggestion {
+    font-size: 1.25rem;
+}
+
+.ap-icon-clear {
+    cursor: pointer;
 }
