--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -1,10 +1,10 @@
 <main class="app-container">
     <header class="header">
         <div class="header__content">
-            <form class="header__form">
+            <form class="header__form search__form">
                 <input placeholder="City, State, or Zip Code" type="text" name="location" id="location"
                     class="header__form--input">
-                <a href="#" class="header__form--link"><input type="button" id="Btn" class="header__form--btn"><i
+                <a href="#" class="header__form--link"><input type="submit" id="Btn" class="header__form--btn" value=""><i
                         class="search-icon fas fa-search-location"></i></a>
             </form>
             <div class="header__filter--container">
