completed main business card UI; added custom scrollbar; TODO: add emoji lib, add models, add dropdown

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Picki</title>
+	<link rel="stylesheet" href="https://unpkg.com/simplebar@latest/dist/simplebar.css" />
+	<script src="https://unpkg.com/simplebar@latest/dist/simplebar.min.js"></script>
 	<link rel="stylesheet" href="https://cdn.materialdesignicons.com/4.2.95/css/materialdesignicons.min.css">
 	<link rel="stylesheet" href="https://use.typekit.net/oad3efw.css">
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
