--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11,8 +11,7 @@ body {
   position: relative;
   font-size: 10px;
   min-height: 100vh;
-  background-color: #181818;
-  background-color: #e4dada;
+  background-color: #e2ecf1;
   overflow-x: hidden;
 }
 
@@ -42,10 +41,10 @@ body {
 }
 
 .logo .orange-text::before {
-  content: '';
+  content: "";
   position: absolute;
-  left: .25rem;
-  top: .25rem;
+  left: 0.25rem;
+  top: 0.25rem;
   z-index: -1;
   background-color: #f0f0f0;
   width: 95%;
@@ -67,12 +66,86 @@ body {
   font-size: 4.6rem;
   color: rgba(68, 84, 204, 0.8);
   margin-bottom: -1rem;
+  -webkit-transform: translateX(-100vw);
+          transform: translateX(-100vw);
+  opacity: 0;
+  -webkit-animation: fadeInLeft 1.3s cubic-bezier(0.215, 0.61, 0.355, 1) 0.125s 1 normal forwards;
+          animation: fadeInLeft 1.3s cubic-bezier(0.215, 0.61, 0.355, 1) 0.125s 1 normal forwards;
+}
+
+@-webkit-keyframes fadeInLeft {
+  0% {
+    -webkit-transform: translateX(-100vw);
+            transform: translateX(-100vw);
+    opacity: 0;
+  }
+  45% {
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes fadeInLeft {
+  0% {
+    -webkit-transform: translateX(-100vw);
+            transform: translateX(-100vw);
+    opacity: 0;
+  }
+  45% {
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeInRight {
+  0% {
+    -webkit-transform: translateX(100vw);
+            transform: translateX(100vw);
+    opacity: 0;
+  }
+  45% {
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes fadeInRight {
+  0% {
+    -webkit-transform: translateX(100vw);
+            transform: translateX(100vw);
+    opacity: 0;
+  }
+  45% {
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    opacity: 1;
+  }
 }
 
 .hero__subtitle {
   font-weight: 700;
   font-size: 2.52rem;
   color: #8f8f8f;
+  -webkit-transform: translateX(100vw);
+          transform: translateX(100vw);
+  opacity: 0;
+  -webkit-animation: fadeInRight 1.5s cubic-bezier(0.215, 0.61, 0.355, 1) 0.35s 1 normal forwards;
+          animation: fadeInRight 1.5s cubic-bezier(0.215, 0.61, 0.355, 1) 0.35s 1 normal forwards;
 }
 
 .hero__form {
@@ -95,9 +168,10 @@ body {
 }
 
 .hero__form--input, .hero__form--btn {
+  cursor: pointer;
   font-size: 2.05rem;
   border: none;
-  padding: .95rem 1.4rem;
+  padding: 0.95rem 1.4rem;
   max-height: 3.75rem;
 }
 
@@ -118,18 +192,18 @@ body {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   font-size: 2rem;
-  color: #FF3800;
+  color: #ff3800;
   pointer-events: none;
-  -webkit-transition: .25s all ease-out;
-  transition: .25s all ease-out;
+  -webkit-transition: 0.25s all ease-out;
+  transition: 0.25s all ease-out;
 }
 
 .hero__form--input {
   border-top-left-radius: 1rem;
   border-bottom-left-radius: 1rem;
   background-color: #f0f0f0;
-  -webkit-transition: .5s all ease;
-  transition: .5s all ease;
+  -webkit-transition: 0.5s all ease;
+  transition: 0.5s all ease;
   height: 100%;
   -webkit-box-flex: 5;
       -ms-flex-positive: 5;
@@ -137,22 +211,22 @@ body {
 }
 
 .hero__form--input::-webkit-input-placeholder {
-  opacity: .5;
+  opacity: 0.5;
   font-style: italic;
 }
 
 .hero__form--input:-ms-input-placeholder {
-  opacity: .5;
+  opacity: 0.5;
   font-style: italic;
 }
 
 .hero__form--input::-ms-input-placeholder {
-  opacity: .5;
+  opacity: 0.5;
   font-style: italic;
 }
 
 .hero__form--input::placeholder {
-  opacity: .5;
+  opacity: 0.5;
   font-style: italic;
 }
 
@@ -168,12 +242,12 @@ body {
   font-weight: 700;
   height: 100%;
   padding-left: 3.75rem;
-  -webkit-transition: .3s all ease;
-  transition: .3s all ease;
+  -webkit-transition: 0.3s all ease;
+  transition: 0.3s all ease;
 }
 
 .hero__form--btn:hover {
-  background-color: #FF3800;
+  background-color: #ff3800;
 }
 
 .hero__form--btn:hover + .search-icon {
@@ -231,13 +305,13 @@ body {
   right: 2.5rem;
   height: 45rem;
   width: 45rem;
-  background-color: #FF3800;
+  background-color: #ff3800;
   background-color: transparent;
   overflow: hidden;
   -webkit-clip-path: circle(1.5rem);
           clip-path: circle(1.5rem);
-  -webkit-transition: .7s all;
-  transition: .7s all;
+  -webkit-transition: 0.7s all;
+  transition: 0.7s all;
 }
 
 .nav-item {
@@ -250,16 +324,16 @@ body {
 }
 
 .nav-item::before {
-  content: '';
+  content: "";
   position: absolute;
   z-index: -1;
   left: 0;
   bottom: 0;
-  height: .5rem;
+  height: 0.5rem;
   width: 0%;
   background-color: #1e466b;
-  -webkit-transition: .3s all;
-  transition: .3s all;
+  -webkit-transition: 0.3s all;
+  transition: 0.3s all;
 }
 
 .nav-item:hover::before {
@@ -269,10 +343,23 @@ body {
 /*************************************************************************************************************
 ==================================   APP PAGE ============================================================
 ***************************************************************************************************************/
+.app-container {
+  position: relative;
+  min-height: 100vh;
+  background-color: rgba(255, 56, 0, 0.85);
+}
+
 .header {
+  position: fixed;
+  top: 0;
   width: 100vw;
   height: 5rem;
-  background-color: #FF3800;
+  background-color: rgba(255, 56, 0, 0.5);
+  -webkit-box-shadow: 0 0.4rem 2.4rem rgba(25, 25, 31, 0.3);
+          box-shadow: 0 0.4rem 2.4rem rgba(25, 25, 31, 0.3);
+  border-bottom: 0.2rem #ff6034 solid;
+  -webkit-backdrop-filter: blur(1rem);
+          backdrop-filter: blur(1rem);
 }
 
 .header__filter--container {
@@ -305,8 +392,8 @@ body {
   height: 2.75rem;
   text-align: center;
   font-size: 1.05rem;
-  line-height: .85;
-  padding: .35rem 2.5rem .75rem;
+  line-height: 0.85;
+  padding: 0.35rem 2.5rem 0.75rem;
   min-width: 8rem;
   width: 95%;
   color: #ff6034;
@@ -339,13 +426,20 @@ body {
   background-color: #ff6034;
   color: #f0f0f0;
   display: inline-block;
-  padding: .55rem 1.5rem;
+  padding: 0.55rem 1.5rem;
   width: 100%;
   border-radius: 1.5rem;
   font-size: 1.1rem;
   cursor: pointer;
   -webkit-box-shadow: 0 0.2rem 1.5rem rgba(25, 25, 31, 0.225);
           box-shadow: 0 0.2rem 1.5rem rgba(25, 25, 31, 0.225);
+  -webkit-transition: 0.35s all ease;
+  transition: 0.35s all ease;
+}
+
+.header__filter__submit:hover {
+  background-color: #f0f0f0;
+  color: #ff6034;
 }
 
 .header__filter__submit--container {
@@ -405,9 +499,10 @@ body {
 }
 
 .header__form--input, .header__form--btn {
+  cursor: pointer;
   font-size: 1.7rem;
   border: none;
-  padding: .95rem 1.4rem;
+  padding: 0.95rem 1.4rem;
   max-height: 3.25rem;
 }
 
@@ -428,18 +523,18 @@ body {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   font-size: 1.5rem;
-  color: #FF3800;
+  color: #ff3800;
   pointer-events: none;
-  -webkit-transition: .25s all ease-out;
-  transition: .25s all ease-out;
+  -webkit-transition: 0.25s all ease-out;
+  transition: 0.25s all ease-out;
 }
 
 .header__form--input {
   border-top-left-radius: 1rem;
   border-bottom-left-radius: 1rem;
   background-color: #f0f0f0;
-  -webkit-transition: .5s all ease;
-  transition: .5s all ease;
+  -webkit-transition: 0.5s all ease;
+  transition: 0.5s all ease;
   height: 100%;
   -webkit-box-flex: 5;
       -ms-flex-positive: 5;
@@ -447,22 +542,22 @@ body {
 }
 
 .header__form--input::-webkit-input-placeholder {
-  opacity: .5;
+  opacity: 0.5;
   font-style: italic;
 }
 
 .header__form--input:-ms-input-placeholder {
-  opacity: .5;
+  opacity: 0.5;
   font-style: italic;
 }
 
 .header__form--input::-ms-input-placeholder {
-  opacity: .5;
+  opacity: 0.5;
   font-style: italic;
 }
 
 .header__form--input::placeholder {
-  opacity: .5;
+  opacity: 0.5;
   font-style: italic;
 }
 
@@ -478,16 +573,195 @@ body {
   font-weight: 700;
   height: 100%;
   padding-left: 3.75rem;
-  -webkit-transition: .3s all ease;
-  transition: .3s all ease;
+  -webkit-transition: 0.3s all ease;
+  transition: 0.3s all ease;
 }
 
 .header__form--btn:hover {
-  background-color: #FF3800;
+  background-color: #ff3800;
 }
 
 .header__form--btn:hover + .search-icon {
   color: rgba(240, 240, 240, 0.85);
+}
+
+.app-body {
+  min-height: 45rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 7.5rem;
+  padding-bottom: 4.25rem;
+  background: linear-gradient(22.5deg, rgba(66, 66, 66, 0.02) 0%, rgba(66, 66, 66, 0.02) 11%, rgba(135, 135, 135, 0.02) 11%, rgba(135, 135, 135, 0.02) 24%, rgba(29, 29, 29, 0.02) 24%, rgba(29, 29, 29, 0.02) 38%, rgba(15, 15, 15, 0.02) 38%, rgba(15, 15, 15, 0.02) 50%, rgba(180, 180, 180, 0.02) 50%, rgba(180, 180, 180, 0.02) 77%, rgba(205, 205, 205, 0.02) 77%, rgba(205, 205, 205, 0.02) 100%), linear-gradient(67.5deg, rgba(10, 10, 10, 0.02) 0%, rgba(10, 10, 10, 0.02) 22%, rgba(52, 52, 52, 0.02) 22%, rgba(52, 52, 52, 0.02) 29%, rgba(203, 203, 203, 0.02) 29%, rgba(203, 203, 203, 0.02) 30%, rgba(69, 69, 69, 0.02) 30%, rgba(69, 69, 69, 0.02) 75%, rgba(231, 231, 231, 0.02) 75%, rgba(231, 231, 231, 0.02) 95%, rgba(138, 138, 138, 0.02) 95%, rgba(138, 138, 138, 0.02) 100%), linear-gradient(112.5deg, rgba(221, 221, 221, 0.02) 0%, rgba(221, 221, 221, 0.02) 17%, rgba(190, 190, 190, 0.02) 17%, rgba(190, 190, 190, 0.02) 39%, rgba(186, 186, 186, 0.02) 39%, rgba(186, 186, 186, 0.02) 66%, rgba(191, 191, 191, 0.02) 66%, rgba(191, 191, 191, 0.02) 68%, rgba(16, 16, 16, 0.02) 68%, rgba(16, 16, 16, 0.02) 70%, rgba(94, 94, 94, 0.02) 70%, rgba(94, 94, 94, 0.02) 100%), linear-gradient(90deg, #f0f0f0, #fff);
+}
+
+.app-body .left-hint {
+  height: 22.5rem;
+  width: 8rem;
+  background-color: rgba(255, 205, 191, 0.746);
+}
+
+.app-body .right-hint {
+  height: 22.5rem;
+  width: 8rem;
+  background-color: rgba(255, 205, 191, 0.746);
+}
+
+.app-body .jumbotron {
+  height: 40rem;
+  width: 50rem;
+  background-color: #ebebdb;
+  border-radius: 0.25rem;
+  -webkit-box-shadow: 0 0 1rem rgba(25, 25, 31, 0.25);
+          box-shadow: 0 0 1rem rgba(25, 25, 31, 0.25);
+  padding: 0.825rem;
+}
+
+.app-body .jumbotron--container {
+  width: 100%;
+  height: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 60% 40%;
+      grid-template-columns: 60% 40%;
+  -ms-grid-rows: 55% 45%;
+      grid-template-rows: 55% 45%;
+}
+
+.app-body .jumbotron__photobox, .app-body .jumbotron__profilebox, .app-body .jumbotron__reactionsbox, .app-body .jumbotron__hoursbox {
+  width: 100%;
+  height: 100%;
+}
+
+.app-body .jumbotron__photobox {
+  padding: 0 0.5rem 0.5rem 0;
+  overflow: hidden;
+  border-radius: 0.3rem;
+}
+
+.app-body .jumbotron__photobox__photo {
+  min-height: 100%;
+  max-width: 100%;
+  border-radius: 0.3rem;
+}
+
+.app-body .jumbotron__profilebox {
+  background-color: #ebebdb;
+  border-radius: 0.5rem;
+  -webkit-box-shadow: 0 0 1.5rem rgba(25, 25, 31, 0.2);
+          box-shadow: 0 0 1.5rem rgba(25, 25, 31, 0.2);
+  text-align: right;
+  padding: 0 0.5rem 0 0.5rem;
+  height: 95%;
+}
+
+.app-body .jumbotron__profilebox__stars {
+  padding: 0.25rem 0.5rem 0.25rem 0;
+}
+
+.app-body .jumbotron__profilebox__stars .star {
+  font-size: 1.65rem;
+  color: #40c3ff;
+}
+
+.app-body .jumbotron__profilebox__title {
+  font-size: 2.15rem;
+  padding-right: 0.5rem;
+  line-height: 1;
+}
+
+.app-body .jumbotron__profilebox__link {
+  font-size: 1.35rem;
+  color: #3dade0;
+}
+
+.app-body .jumbotron__profilebox__link--container {
+  padding-right: 0.5rem;
+}
+
+.app-body .jumbotron__profilebox__address--container, .app-body .jumbotron__profilebox__contact--container {
+  margin: 1rem 0;
+  padding-right: 0.5rem;
+}
+
+.app-body .jumbotron__profilebox__address--container .contact-num, .app-body .jumbotron__profilebox__contact--container .contact-num {
+  font-size: 1.15rem;
+}
+
+.app-body .jumbotron__profilebox__address-title, .app-body .jumbotron__profilebox__contact-title {
+  font-size: 1.6rem;
+}
+
+.app-body .jumbotron__profilebox__address .addr1,
+.app-body .jumbotron__profilebox__address .addr2, .app-body .jumbotron__profilebox__contact .addr1,
+.app-body .jumbotron__profilebox__contact .addr2 {
+  font-size: 1.15rem;
+}
+
+.app-body .jumbotron__reactionsbox {
+  padding: 1rem 1rem 1rem 0;
+}
+
+.app-body .jumbotron__reactionsbox .reactions {
+  display: inline-block;
+  margin: 0 auto;
+  font-size: 3.5rem;
+  padding: .25rem .4rem;
+  cursor: pointer;
+}
+
+.app-body .jumbotron__reactionsbox .reactions__count {
+  font-size: 2rem;
+  text-align: center;
+  line-height: .8;
+  margin-top: -.5rem;
+  margin-bottom: .5rem;
+  color: #f0f0f0;
+}
+
+.app-body .jumbotron__reactionsbox .reactions--container {
+  width: 100%;
+  height: 100%;
+  background-color: #ff6034;
+  border-radius: 0.3rem;
+  -webkit-box-shadow: inset 0 0 2rem rgba(25, 25, 31, 0.5);
+          box-shadow: inset 0 0 2rem rgba(25, 25, 31, 0.5);
+  padding: .25rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.app-body .jumbotron__hoursbox {
+  background-color: #3eaf56;
+  text-align: right;
+  padding: 0.5rem 1.5rem;
+  background-color: #ebebdb;
+  border-radius: 0.5rem;
+  -webkit-box-shadow: inset 0 0 1.5rem rgba(25, 25, 31, 0.2);
+          box-shadow: inset 0 0 1.5rem rgba(25, 25, 31, 0.2);
+}
+
+.app-body .jumbotron__hoursbox--title {
+  font-size: 1.6rem;
+}
+
+.app-body .jumbotron__hoursbox__hours {
+  font-size: 1.05rem;
 }
 
 .full-circle {
@@ -510,5 +784,10 @@ body {
 
 .ap-icon-clear {
   cursor: pointer;
+}
+
+.scroll-box {
+  min-height: 100%;
+  width: 100%;
 }
 /*# sourceMappingURL=style.css.map */
