--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -4,8 +4,8 @@
             <form class="header__form search__form">
                 <input placeholder="City, State, or Zip Code" type="text" name="location" id="location"
                     class="header__form--input">
-                <a href="#" class="header__form--link"><input type="submit" id="Btn" class="header__form--btn" value=""><i
-                        class="search-icon fas fa-search-location"></i></a>
+                <a href="#" class="header__form--link"><input type="submit" id="Btn" class="header__form--btn"
+                        value=""><i class="search-icon fas fa-search-location"></i></a>
             </form>
             <div class="header__filter--container">
                 <div class="header__filter__radio--container">
@@ -29,8 +29,132 @@
                         <div class="mdi mdi-menu-down"></div>
                     </label>
                 </div>
-                <div class="header__filter__submit--container mdi mdi-filter"><input type="button" value="Filter Results" class="header__filter__submit" id="filterResults"></div>
+                <div class="header__filter__submit--container mdi mdi-filter"><input type="button"
+                        value="Filter Results" class="header__filter__submit" id="filterResults"></div>
             </div>
         </div>
     </header>
+    <div class="app-body">
+        <div class="left-hint">
+
+        </div>
+        <div class="jumbotron">
+            <div class="jumbotron--container">
+                <div class="jumbotron__photobox">
+                    <img id="businessPhoto" class="jumbotron__photobox__photo" src="assets/media/tacobell.jpg"
+                        alt="Taco Bell">
+                </div>
+                <div class="jumbotron__profilebox">
+                    <div class="jumbotron__profilebox__stars">
+                        <span class="star mdi mdi-star"></span>
+                        <span class="star mdi mdi-star"></span>
+                        <span class="star mdi mdi-star"></span>
+                        <span class="star mdi mdi-star"></span>
+                        <span class="star mdi mdi-star"></span>
+                    </div>
+                    <h1 class="jumbotron__profilebox__title">Taco Bell</h1>
+                    <div class="jumbotron__profilebox__link--container">
+                        <a class="jumbotron__profilebox__link"
+                            href="https://locations.tacobell.com/az/tempe/1801-east-guadalupe.html"
+                            target="_blank">Website</a>
+                    </div>
+                    <div class="jumbotron__profilebox__address--container">
+                        <h2 class="jumbotron__profilebox__address-title">
+                            Address:
+                        </h2>
+                        <div class="jumbotron__profilebox__address">
+                            <p class="addr1">1801 East Guadalupe</p>
+                            <p class="addr2">Tempe, AZ 85283</p>
+                        </div>
+                    </div>
+                    <div class="jumbotron__profilebox__contact--container">
+                        <h2 class="jumbotron__profilebox__contact-title">
+                            Phone:
+                        </h2>
+                        <p class="contact-num">(480) 756-0991</p>
+                    </div>
+                </div>
+                <div class="jumbotron__reactionsbox">
+                    <div class="reactions--container" data-simplebar>
+                        <div class="reactions">&#x1F639;
+                            <p class="reactions__count">175</p>
+                        </div>
+                        <div class="reactions">&#x1F639;
+                            <p class="reactions__count">175</p>
+                        </div>
+                        <div class="reactions">&#x1F639;
+                            <p class="reactions__count">175</p>
+                        </div>
+                        <div class="reactions">&#x1F639;
+                            <p class="reactions__count">175</p>
+                        </div>
+                        <div class="reactions">&#x1F639;
+                            <p class="reactions__count">175</p>
+                        </div>
+                        <div class="reactions">&#x1F639;
+                            <p class="reactions__count">175</p>
+                        </div>
+                        <div class="reactions">&#x1F639;
+                            <p class="reactions__count">175</p>
+                        </div>
+                        <div class="reactions">&#x1F639;
+                            <p class="reactions__count">175</p>
+                        </div>
+                        <div class="reactions">&#x1F639;
+                            <p class="reactions__count">175</p>
+                        </div>
+                        <div class="reactions">&#x1F639;
+                            <p class="reactions__count">175</p>
+                        </div>
+                        <div class="reactions">&#x1F639;
+                            <p class="reactions__count">175</p>
+                        </div>
+                        <div class="reactions">&#x1F639;
+                            <p class="reactions__count">175</p>
+                        </div>
+                        <div class="reactions">&#x1F639;
+                            <p class="reactions__count">175</p>
+                        </div>
+                        <div class="reactions">&#x1F639;
+                            <p class="reactions__count">175</p>
+                        </div>
+                        <div class="reactions">&#x1F639;
+                            <p class="reactions__count">175</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="jumbotron__hoursbox">
+                    <h2 class="jumbotron__hoursbox--title">
+                        Hours of Operation:
+                    </h2>
+                    <div class="jumbotron__hoursbox__hours--container">
+                        <p class="jumbotron__hoursbox__hours" id="monday">
+                            Monday: 7:00 AM - 1:00 AM
+                        </p>
+                        <p class="jumbotron__hoursbox__hours" id="tuesday">
+                            Tuesday: 7:00 AM - 1:00 AM
+                        </p>
+                        <p class="jumbotron__hoursbox__hours" id="wednesday">
+                            Wednesday: 7:00 AM - 1:00 AM
+                        </p>
+                        <p class="jumbotron__hoursbox__hours" id="thursday">
+                            Thursday: 7:00 AM - 1:00 AM
+                        </p>
+                        <p class="jumbotron__hoursbox__hours" id="friday">
+                            Friday: 7:00 AM - 2:00 AM
+                        </p>
+                        <p class="jumbotron__hoursbox__hours" id="saturday">
+                            Saturday: 7:00 AM - 2:00 AM
+                        </p>
+                        <p class="jumbotron__hoursbox__hours" id="sunday">
+                            Sunday: 7:00 AM - 1:00 AM
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="right-hint">
+
+        </div>
+    </div>
 </main>
