--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -26,7 +26,7 @@
                     <feMergeNode in="SourceGraphic" /> <!-- this contains the element that the filter is applied to -->
                 </feMerge>
             </filter>
-            <path fill="#ff6034" fill-opacity=".6"
+            <path fill="#ff6034" fill-opacity=".6" style="filter:url(#dropshadow)"
                 d="M0,256L40,266.7C80,277,160,299,240,272C320,245,400,171,480,117.3C560,64,640,32,720,58.7C800,85,880,171,960,176C1040,181,1120,107,1200,106.7C1280,107,1360,181,1400,218.7L1440,256L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z">
             </path>
         </svg>
