completed carousel slider (touch enabled); fed html demo businesses

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -347,10 +347,31 @@ body {
   position: relative;
   min-height: 100vh;
   background-color: rgba(255, 56, 0, 0.85);
+  width: 100vw;
+  margin-left: auto;
+  margin-right: auto;
+  background: linear-gradient(22.5deg, rgba(66, 66, 66, 0.02) 0%, rgba(66, 66, 66, 0.02) 11%, rgba(135, 135, 135, 0.02) 11%, rgba(135, 135, 135, 0.02) 24%, rgba(29, 29, 29, 0.02) 24%, rgba(29, 29, 29, 0.02) 38%, rgba(15, 15, 15, 0.02) 38%, rgba(15, 15, 15, 0.02) 50%, rgba(180, 180, 180, 0.02) 50%, rgba(180, 180, 180, 0.02) 77%, rgba(205, 205, 205, 0.02) 77%, rgba(205, 205, 205, 0.02) 100%), linear-gradient(67.5deg, rgba(10, 10, 10, 0.02) 0%, rgba(10, 10, 10, 0.02) 22%, rgba(52, 52, 52, 0.02) 22%, rgba(52, 52, 52, 0.02) 29%, rgba(203, 203, 203, 0.02) 29%, rgba(203, 203, 203, 0.02) 30%, rgba(69, 69, 69, 0.02) 30%, rgba(69, 69, 69, 0.02) 75%, rgba(231, 231, 231, 0.02) 75%, rgba(231, 231, 231, 0.02) 95%, rgba(138, 138, 138, 0.02) 95%, rgba(138, 138, 138, 0.02) 100%), linear-gradient(112.5deg, rgba(221, 221, 221, 0.02) 0%, rgba(221, 221, 221, 0.02) 17%, rgba(190, 190, 190, 0.02) 17%, rgba(190, 190, 190, 0.02) 39%, rgba(186, 186, 186, 0.02) 39%, rgba(186, 186, 186, 0.02) 66%, rgba(191, 191, 191, 0.02) 66%, rgba(191, 191, 191, 0.02) 68%, rgba(16, 16, 16, 0.02) 68%, rgba(16, 16, 16, 0.02) 70%, rgba(94, 94, 94, 0.02) 70%, rgba(94, 94, 94, 0.02) 100%), linear-gradient(90deg, #f0f0f0, #fff);
+}
+
+.app-container .swiper-button-prev,
+.app-container .swiper-button-next {
+  background-image: none;
+  position: fixed;
+  font-size: 3rem;
+  color: #ff3800;
+}
+
+.app-container .swiper-button-next {
+  right: 2.5rem !important;
+}
+
+.app-container .swiper-button-prev {
+  left: 2.5rem !important;
 }
 
 .header {
   position: fixed;
+  z-index: 5000;
   top: 0;
   width: 100vw;
   height: 5rem;
@@ -363,19 +384,23 @@ body {
 }
 
 .header__filter--container {
-  -webkit-box-flex: 5;
-      -ms-flex-positive: 5;
-          flex-grow: 5;
-  margin: 0 1rem 0 4rem;
-  height: 3rem;
+  -webkit-box-flex: 4;
+      -ms-flex-positive: 4;
+          flex-grow: 4;
+  max-width: 40rem;
+  margin: 0;
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
 }
 
 .header__filter__radio {
@@ -389,15 +414,15 @@ body {
   display: inline-block;
   cursor: pointer;
   background-color: rgba(240, 240, 240, 0.99);
-  height: 2.75rem;
+  height: 2.5rem;
   text-align: center;
   font-size: 1.05rem;
   line-height: 0.85;
-  padding: 0.35rem 2.5rem 0.75rem;
+  padding: 0.35rem 1.5rem 0.75rem;
   min-width: 8rem;
-  width: 95%;
+  width: 7.5rem;
   color: #ff6034;
-  border-bottom: 0.2rem #544634 solid;
+  border-radius: 0.15rem;
   -webkit-box-shadow: 0 0 1.05rem rgba(25, 25, 31, 0.1);
           box-shadow: 0 0 1.05rem rgba(25, 25, 31, 0.1);
 }
@@ -411,25 +436,25 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
 
 .header__filter__submit {
-  background-color: transparent;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
   border: none;
   text-align: center;
   background-color: #ff6034;
   color: #f0f0f0;
-  display: inline-block;
   padding: 0.55rem 1.5rem;
-  width: 100%;
   border-radius: 1.5rem;
   font-size: 1.1rem;
+  width: 12.5rem;
   cursor: pointer;
   -webkit-box-shadow: 0 0.2rem 1.5rem rgba(25, 25, 31, 0.225);
           box-shadow: 0 0.2rem 1.5rem rgba(25, 25, 31, 0.225);
@@ -448,17 +473,18 @@ body {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  -webkit-box-flex: 5;
-      -ms-flex-positive: 5;
-          flex-grow: 5;
+  -webkit-box-flex: 2;
+      -ms-flex-positive: 2;
+          flex-grow: 2;
   font-size: 1.3rem;
   color: #f0f0f0;
 }
 
 .header__filter__submit--container::before {
   position: absolute;
+  z-index: 1;
+  right: 1rem;
   top: 50%;
-  left: 20%;
   -webkit-transform: translate(0, -50%);
           transform: translate(0, -50%);
 }
@@ -478,10 +504,13 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .header__form {
-  max-width: 35rem;
+  max-width: 20rem;
   height: 3.25rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -587,35 +616,31 @@ body {
 
 .app-body {
   min-height: 45rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  max-height: calc(100% - 5rem);
   padding-top: 7.5rem;
-  padding-bottom: 4.25rem;
-  background: linear-gradient(22.5deg, rgba(66, 66, 66, 0.02) 0%, rgba(66, 66, 66, 0.02) 11%, rgba(135, 135, 135, 0.02) 11%, rgba(135, 135, 135, 0.02) 24%, rgba(29, 29, 29, 0.02) 24%, rgba(29, 29, 29, 0.02) 38%, rgba(15, 15, 15, 0.02) 38%, rgba(15, 15, 15, 0.02) 50%, rgba(180, 180, 180, 0.02) 50%, rgba(180, 180, 180, 0.02) 77%, rgba(205, 205, 205, 0.02) 77%, rgba(205, 205, 205, 0.02) 100%), linear-gradient(67.5deg, rgba(10, 10, 10, 0.02) 0%, rgba(10, 10, 10, 0.02) 22%, rgba(52, 52, 52, 0.02) 22%, rgba(52, 52, 52, 0.02) 29%, rgba(203, 203, 203, 0.02) 29%, rgba(203, 203, 203, 0.02) 30%, rgba(69, 69, 69, 0.02) 30%, rgba(69, 69, 69, 0.02) 75%, rgba(231, 231, 231, 0.02) 75%, rgba(231, 231, 231, 0.02) 95%, rgba(138, 138, 138, 0.02) 95%, rgba(138, 138, 138, 0.02) 100%), linear-gradient(112.5deg, rgba(221, 221, 221, 0.02) 0%, rgba(221, 221, 221, 0.02) 17%, rgba(190, 190, 190, 0.02) 17%, rgba(190, 190, 190, 0.02) 39%, rgba(186, 186, 186, 0.02) 39%, rgba(186, 186, 186, 0.02) 66%, rgba(191, 191, 191, 0.02) 66%, rgba(191, 191, 191, 0.02) 68%, rgba(16, 16, 16, 0.02) 68%, rgba(16, 16, 16, 0.02) 70%, rgba(94, 94, 94, 0.02) 70%, rgba(94, 94, 94, 0.02) 100%), linear-gradient(90deg, #f0f0f0, #fff);
+  padding-bottom: 12.5rem;
 }
 
 .app-body .left-hint {
   height: 22.5rem;
   width: 8rem;
   background-color: rgba(255, 205, 191, 0.746);
+  height: 40rem;
+  max-width: 50rem;
 }
 
 .app-body .right-hint {
   height: 22.5rem;
   width: 8rem;
   background-color: rgba(255, 205, 191, 0.746);
+  height: 40rem;
+  max-width: 50rem;
 }
 
 .app-body .jumbotron {
   height: 40rem;
   width: 50rem;
+  margin: 3rem 0 1rem;
   background-color: #ebebdb;
   border-radius: 0.25rem;
   -webkit-box-shadow: 0 0 1rem rgba(25, 25, 31, 0.25);
@@ -630,8 +655,8 @@ body {
   display: grid;
   -ms-grid-columns: 60% 40%;
       grid-template-columns: 60% 40%;
-  -ms-grid-rows: 55% 45%;
-      grid-template-rows: 55% 45%;
+  -ms-grid-rows: 55% 45% 10%;
+      grid-template-rows: 55% 45% 10%;
 }
 
 .app-body .jumbotron__photobox, .app-body .jumbotron__profilebox, .app-body .jumbotron__reactionsbox, .app-body .jumbotron__hoursbox {
@@ -706,22 +731,23 @@ body {
 
 .app-body .jumbotron__reactionsbox {
   padding: 1rem 1rem 1rem 0;
+  position: relative;
 }
 
 .app-body .jumbotron__reactionsbox .reactions {
   display: inline-block;
   margin: 0 auto;
-  font-size: 3.5rem;
-  padding: .25rem .4rem;
+  font-size: 3.125rem;
+  padding: 0.25rem 0.4rem;
   cursor: pointer;
 }
 
 .app-body .jumbotron__reactionsbox .reactions__count {
   font-size: 2rem;
   text-align: center;
-  line-height: .8;
-  margin-top: -.5rem;
-  margin-bottom: .5rem;
+  line-height: 0.8;
+  margin-top: -0.5rem;
+  margin-bottom: 0.5rem;
   color: #f0f0f0;
 }
 
@@ -732,7 +758,7 @@ body {
   border-radius: 0.3rem;
   -webkit-box-shadow: inset 0 0 2rem rgba(25, 25, 31, 0.5);
           box-shadow: inset 0 0 2rem rgba(25, 25, 31, 0.5);
-  padding: .25rem;
+  padding: 0.25rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -789,5 +815,15 @@ body {
 .scroll-box {
   min-height: 100%;
   width: 100%;
+}
+
+.swiper-slide {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 /*# sourceMappingURL=style.css.map */
