--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -291,26 +291,94 @@ body {
     position: relative;
     min-height: 100vh;
     background-color: rgba($orange, 0.85);
+    width: 100vw;
+    margin-left: auto;
+    margin-right: auto;
+    background: linear-gradient(
+        22.5deg,
+        rgba(66, 66, 66, 0.02) 0%,
+        rgba(66, 66, 66, 0.02) 11%,
+        rgba(135, 135, 135, 0.02) 11%,
+        rgba(135, 135, 135, 0.02) 24%,
+        rgba(29, 29, 29, 0.02) 24%,
+        rgba(29, 29, 29, 0.02) 38%,
+        rgba(15, 15, 15, 0.02) 38%,
+        rgba(15, 15, 15, 0.02) 50%,
+        rgba(180, 180, 180, 0.02) 50%,
+        rgba(180, 180, 180, 0.02) 77%,
+        rgba(205, 205, 205, 0.02) 77%,
+        rgba(205, 205, 205, 0.02) 100%
+    ),
+    linear-gradient(
+        67.5deg,
+        rgba(10, 10, 10, 0.02) 0%,
+        rgba(10, 10, 10, 0.02) 22%,
+        rgba(52, 52, 52, 0.02) 22%,
+        rgba(52, 52, 52, 0.02) 29%,
+        rgba(203, 203, 203, 0.02) 29%,
+        rgba(203, 203, 203, 0.02) 30%,
+        rgba(69, 69, 69, 0.02) 30%,
+        rgba(69, 69, 69, 0.02) 75%,
+        rgba(231, 231, 231, 0.02) 75%,
+        rgba(231, 231, 231, 0.02) 95%,
+        rgba(138, 138, 138, 0.02) 95%,
+        rgba(138, 138, 138, 0.02) 100%
+    ),
+    linear-gradient(
+        112.5deg,
+        rgba(221, 221, 221, 0.02) 0%,
+        rgba(221, 221, 221, 0.02) 17%,
+        rgba(190, 190, 190, 0.02) 17%,
+        rgba(190, 190, 190, 0.02) 39%,
+        rgba(186, 186, 186, 0.02) 39%,
+        rgba(186, 186, 186, 0.02) 66%,
+        rgba(191, 191, 191, 0.02) 66%,
+        rgba(191, 191, 191, 0.02) 68%,
+        rgba(16, 16, 16, 0.02) 68%,
+        rgba(16, 16, 16, 0.02) 70%,
+        rgba(94, 94, 94, 0.02) 70%,
+        rgba(94, 94, 94, 0.02) 100%
+    ),
+    linear-gradient(90deg, $white, #fff);
+
+    .swiper-button-prev,
+    .swiper-button-next {
+        background-image: none;
+        position: fixed;
+        font-size: 3rem;
+        color: $orange;
+    }
+
+    .swiper-button-next {
+        right: 2.5rem !important;
+    }
+
+    .swiper-button-prev {
+        left: 2.5rem !important;
+    }
 }
 
 .header {
     position: fixed;
+    z-index: 5000;
     top: 0;
     width: 100vw;
     height: 5rem;
     background-color: rgba($orange, 0.5);
     box-shadow: 0 0.4rem 2.4rem rgba($black, 0.3);
-    border-bottom: .2rem $orange-light solid;
+    border-bottom: 0.2rem $orange-light solid;
     backdrop-filter: blur(1rem);
 
     &__filter {
         &--container {
-            flex-grow: 5;
-            margin: 0 1rem 0 4rem;
-            height: 3rem;
+            flex-grow: 4;
+            max-width: 40rem;
+            margin: 0;
+            height: 100%;
             display: flex;
             align-items: center;
-            justify-content: space-around;
+            justify-content: center;
+            align-self: flex-end;
         }
         &__radio {
             appearance: none;
@@ -320,15 +388,16 @@ body {
                 display: inline-block;
                 cursor: pointer;
                 background-color: rgba($white, 0.99);
-                height: 2.75rem;
+                height: 2.5rem;
                 text-align: center;
                 font-size: 1.05rem;
                 line-height: 0.85;
-                padding: 0.35rem 2.5rem 0.75rem;
+                padding: 0.35rem 1.5rem 0.75rem;
                 min-width: 8rem;
-                width: 95%;
+                width: 7.5rem;
                 color: $orange-light;
-                border-bottom: 0.2rem $brown solid;
+                border-radius: 0.15rem;
+                // border-bottom: 0.2rem $brown solid;
                 box-shadow: 0 0 1.05rem rgba($black, 0.1);
 
                 .mdi {
@@ -339,21 +408,22 @@ body {
             &--container {
                 height: 100%;
                 display: flex;
-                align-items: center;
-                flex-grow: 1;
+                align-items: flex-end;
             }
         }
         &__submit {
-            background-color: transparent;
+            position: absolute;
+            right: 0;
+            top: 50%;
+            transform: translateY(-50%);
             border: none;
             text-align: center;
             background-color: $orange-light;
             color: $white;
-            display: inline-block;
             padding: 0.55rem 1.5rem;
-            width: 100%;
             border-radius: 1.5rem;
             font-size: 1.1rem;
+            width: 12.5rem;
             cursor: pointer;
             box-shadow: 0 0.2rem 1.5rem rgba($black, 0.225);
             transition: 0.35s all ease;
@@ -367,14 +437,15 @@ body {
                 margin-right: 1rem;
                 position: relative;
                 align-self: center;
-                flex-grow: 5;
+                flex-grow: 2;
                 font-size: 1.3rem;
                 color: $white;
 
                 &::before {
                     position: absolute;
+                    z-index: 1;
+                    right: 1rem;
                     top: 50%;
-                    left: 20%;
                     transform: translate(0, -50%);
                 }
             }
@@ -392,10 +463,11 @@ body {
         background-color: rgba($white, 0.05);
         display: flex;
         align-items: center;
+        justify-content: space-between;
     }
 
     &__form {
-        max-width: 35rem;
+        max-width: 20rem;
         height: 3.25rem;
         display: flex;
         align-items: center;
@@ -476,73 +548,35 @@ body {
 //APP content
 .app-body {
     min-height: 45rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    max-height: calc(100% - 5rem);
+    // margin-left: 25rem;
+    // width: 400vh;
+    // display: flex;
+    // justify-content: space-around;
+    // align-items: center;
     padding-top: 7.5rem;
-    padding-bottom: 4.25rem;
-    background: linear-gradient(
-            22.5deg,
-            rgba(66, 66, 66, 0.02) 0%,
-            rgba(66, 66, 66, 0.02) 11%,
-            rgba(135, 135, 135, 0.02) 11%,
-            rgba(135, 135, 135, 0.02) 24%,
-            rgba(29, 29, 29, 0.02) 24%,
-            rgba(29, 29, 29, 0.02) 38%,
-            rgba(15, 15, 15, 0.02) 38%,
-            rgba(15, 15, 15, 0.02) 50%,
-            rgba(180, 180, 180, 0.02) 50%,
-            rgba(180, 180, 180, 0.02) 77%,
-            rgba(205, 205, 205, 0.02) 77%,
-            rgba(205, 205, 205, 0.02) 100%
-        ),
-        linear-gradient(
-            67.5deg,
-            rgba(10, 10, 10, 0.02) 0%,
-            rgba(10, 10, 10, 0.02) 22%,
-            rgba(52, 52, 52, 0.02) 22%,
-            rgba(52, 52, 52, 0.02) 29%,
-            rgba(203, 203, 203, 0.02) 29%,
-            rgba(203, 203, 203, 0.02) 30%,
-            rgba(69, 69, 69, 0.02) 30%,
-            rgba(69, 69, 69, 0.02) 75%,
-            rgba(231, 231, 231, 0.02) 75%,
-            rgba(231, 231, 231, 0.02) 95%,
-            rgba(138, 138, 138, 0.02) 95%,
-            rgba(138, 138, 138, 0.02) 100%
-        ),
-        linear-gradient(
-            112.5deg,
-            rgba(221, 221, 221, 0.02) 0%,
-            rgba(221, 221, 221, 0.02) 17%,
-            rgba(190, 190, 190, 0.02) 17%,
-            rgba(190, 190, 190, 0.02) 39%,
-            rgba(186, 186, 186, 0.02) 39%,
-            rgba(186, 186, 186, 0.02) 66%,
-            rgba(191, 191, 191, 0.02) 66%,
-            rgba(191, 191, 191, 0.02) 68%,
-            rgba(16, 16, 16, 0.02) 68%,
-            rgba(16, 16, 16, 0.02) 70%,
-            rgba(94, 94, 94, 0.02) 70%,
-            rgba(94, 94, 94, 0.02) 100%
-        ),
-        linear-gradient(90deg, $white, #fff);
+    padding-bottom: 12.5rem;
 
     .left-hint {
         height: 22.5rem;
         width: 8rem;
         background-color: rgba(255, 205, 191, 0.746);
+        height: 40rem;
+        max-width: 50rem;
     }
 
     .right-hint {
         height: 22.5rem;
         width: 8rem;
         background-color: rgba(255, 205, 191, 0.746);
+        height: 40rem;
+        max-width: 50rem;
     }
 
     .jumbotron {
         height: 40rem;
         width: 50rem;
+        margin: 3rem 0 1rem;
         background-color: #ebebdb;
         border-radius: 0.25rem;
         box-shadow: 0 0 1rem rgba($black, 0.25);
@@ -554,7 +588,7 @@ body {
             height: 100%;
             display: grid;
             grid-template-columns: 60% 40%;
-            grid-template-rows: 55% 45%;
+            grid-template-rows: 55% 45% 10%;
         }
 
         &__photobox,
@@ -631,20 +665,21 @@ body {
         }
         &__reactionsbox {
             padding: 1rem 1rem 1rem 0;
+            position: relative;
 
             .reactions {
                 display: inline-block;
                 margin: 0 auto;
-                font-size: 3.5rem;
-                padding: .25rem .4rem;
+                font-size: 3.125rem;
+                padding: 0.25rem 0.4rem;
                 cursor: pointer;
 
                 &__count {
                     font-size: 2rem;
                     text-align: center;
-                    line-height: .8;
-                    margin-top: -.5rem;
-                    margin-bottom: .5rem;
+                    line-height: 0.8;
+                    margin-top: -0.5rem;
+                    margin-bottom: 0.5rem;
                     color: $white;
                 }
                 &--container {
@@ -653,7 +688,7 @@ body {
                     background-color: $orange-light;
                     border-radius: 0.3rem;
                     box-shadow: inset 0 0 2rem rgba($black, 0.5);
-                    padding: .25rem;
+                    padding: 0.25rem;
                     display: flex;
                     flex-wrap: wrap;
                     align-items: flex-start;
@@ -707,4 +742,10 @@ body {
 .scroll-box {
     min-height: 100%;
     width: 100%;
+}
+
+.swiper-slide {
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
