--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,18 +5,20 @@
 	<meta charset="UTF-8">
 	<title>Picki</title>
 	<link rel="stylesheet" href="https://unpkg.com/simplebar@latest/dist/simplebar.css" />
-	<script src="https://unpkg.com/simplebar@latest/dist/simplebar.min.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
 	<link rel="stylesheet" href="https://cdn.materialdesignicons.com/4.2.95/css/materialdesignicons.min.css">
 	<link rel="stylesheet" href="https://use.typekit.net/oad3efw.css">
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-	{{!-- <script src="assets/moment.js"></script>	 --}}
 </head>
 
 <body>
 	{{{ body }}}
+
+
+	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://unpkg.com/simplebar@latest/dist/simplebar.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/places.js@1.16.4"></script>
 	<script src="assets/js/algolia.js"></script>
 	<script src="https://kit.fontawesome.com/77faf95db4.js"></script>
